RESOLVED FIXED191295
RealtimeOutgoingAudioSourceCocoa should unobserve its source at destruction time
https://bugs.webkit.org/show_bug.cgi?id=191295
Summary RealtimeOutgoingAudioSourceCocoa should unobserve its source at destruction time
youenn fablet
Reported 2018-11-05 19:17:37 PST
Currently it is done at RealtimeOutgoingAudioSource destruction time which might be too late.
Attachments
Patch (5.15 KB, patch)
2018-11-05 19:20 PST, youenn fablet
no flags
youenn fablet
Comment 1 2018-11-05 19:20:01 PST
WebKit Commit Bot
Comment 2 2018-11-06 08:14:36 PST
Comment on attachment 353941 [details] Patch Clearing flags on attachment: 353941 Committed r237867: <https://trac.webkit.org/changeset/237867>
WebKit Commit Bot
Comment 3 2018-11-06 08:14:38 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-11-06 08:15:22 PST
Note You need to log in before you can comment on or make changes to this bug.