RealtimeOutgoingAudioSourceCocoa should unobserve its source at destruction time https://bugs.webkit.org/show_bug.cgi?id=191295

Reviewed by Eric Carlson.

Make RealtimeOutgoingAudioSource subclasses unobserve their source
inside their destructor instead of RealtimeOutgoingAudioSource.
This is consistent with how starting to observe works.
Covered by existing tests.

* platform/mediastream/RealtimeOutgoingAudioSource.cpp:
(WebCore::RealtimeOutgoingAudioSource::unobserveSource):
* platform/mediastream/RealtimeOutgoingAudioSource.h:
* platform/mediastream/gstreamer/RealtimeOutgoingAudioSourceLibWebRTC.cpp:
(WebCore::RealtimeOutgoingAudioSourceLibWebRTC::~RealtimeOutgoingAudioSourceLibWebRTC):
* platform/mediastream/mac/RealtimeOutgoingAudioSourceCocoa.cpp:
(WebCore::RealtimeOutgoingAudioSourceCocoa::RealtimeOutgoingAudioSourceCocoa):
(WebCore::RealtimeOutgoingAudioSourceCocoa::~RealtimeOutgoingAudioSourceCocoa):
* platform/mediastream/mac/RealtimeOutgoingAudioSourceCocoa.h:


Canonical link: https://commits.webkit.org/206116@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237867 268f45cc-cd09-0410-ab3c-d52691b4dbfc